--- a/.github/workflows/first-workflow.yml
+++ b/.github/workflows/first-workflow.yml
@@ -1,6 +1,10 @@
 name: learn-github-actions
 run-name: ${{ github.actor }} is learning GitHub Actions
-on: workflow_dispatch
+on:
+  workflow_dispatch:
+  issues:
+    types: [opened, edited, milestoned]
+
 jobs:
   job1:
     runs-on: ubuntu-latest
