--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -51,7 +51,7 @@ jobs:
 
   deploy-to-dev:
     runs-on: ubuntu-latest
-    needs: dockerBuildPush
+    needs: docker-build
     environment:
       name: dev
       url: https://zfwyj7jpgw3hs-dev.azurewebsites.net/
