--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -69,7 +69,7 @@ jobs:
   deploy-to-test:
   
     runs-on: ubuntu-latest
-    needs: deploy-to-dev
+    needs: docker-build
     environment:
       name: test
       url: https://zfwyj7jpgw3hs-test.azurewebsites.net/
@@ -90,7 +90,7 @@ jobs:
   deploy-to-prod:
   
     runs-on: ubuntu-latest
-    needs: deploy-to-test
+    needs: docker-build
     environment:
       name: prod
       url: https://zfwyj7jpgw3hs-prod.azurewebsites.net/
